--- a/css/sub01.css
+++ b/css/sub01.css
@@ -65,14 +65,14 @@
   font-size: 60px;
 }
 
-.sec01_content>ul li .line {
+.sec01_content > ul li .ani_line {
   width: 100%;
   height: 2px;
   background-color: #333;
   margin-top: 40px;
 }
 
-.sec01_content>ul li .line.on {
+.sec01_content > ul li .ani_line.on {
   animation: lineAni 2s;
 }
 
