--- a/css/sub07.css
+++ b/css/sub07.css
@@ -17,7 +17,7 @@
 }
 
 #sub_main_wrap .text_box .title span {
-  font-size: 22px;
+  font-size: 18px;
   color: black;
 }
 
@@ -147,4 +147,278 @@
   display: inline-block;
   left: 50%;
   transform: translateX(-50%);
+}
+
+/*login area*/
+#login_section{
+  min-width: 1200px;
+}
+
+#login_section .login_box{
+  position: relative;
+  width: 400px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+#login_section .login_box .title{
+  padding: 40px 0;
+}
+
+#login_section .login_box form{
+  margin: 0 50px 0;
+}
+
+#login_section .login_box form fieldset > input{
+  width: 100%;
+  height: 40px;
+  padding: 5px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: black;
+  border-radius: 3px;
+}
+
+#login_section .login_box form fieldset .submit_btn{
+  height: 45px;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  border: 1px solid #3d3d3d;
+  color: #3d3d3d;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+#login_section .login_box form fieldset .submit_btn:hover{
+  background-color: #3d3d3d;
+  color: #fff;
+}
+
+#login_section .login_box form fieldset .check_box{
+  display: inline-block;
+  float: right;
+}
+
+#login_section .login_box form fieldset .check_box label{
+  font-size: 12px;
+  line-height: 12px;
+}
+
+#login_section .login_box form fieldset .check_box > input{
+  vertical-align: bottom;
+}
+
+#login_section .login_box .login_info{
+  display: inline-block;
+  width: 100%;
+  background-color: #f6f6f6;
+  padding: 30px 10px;
+  border-top: 1px solid #e8e8e8;
+  margin: 40px 0 0;
+}
+
+#login_section .login_box .login_info > div{
+  display: inline-block;
+  float: left;
+  width: 50%;
+}
+
+#login_section .login_box .login_info > div a{
+  font-size: 12px;
+  text-align: center;
+  color: #000;
+  padding: 10px;
+}
+
+#login_section .login_box .login_info > div:first-child{
+  border-right: 1px solid #ddd;
+}
+
+/* join area */
+#join_section .join_wrap form > p{
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  color: #c7254e;
+  background-color: #f9f2f4;
+  padding: 20px;
+  border: 1px solid #ecc7d2;
+  margin: 0 0 5px;
+}
+
+#join_section .join_wrap form .check_all{
+  text-align: right;
+  margin-right: 5px;
+}
+
+#join_section .join_wrap form label{
+  font-size: 16px;
+  font-weight: 400;
+}
+
+#join_section .join_wrap form #frefister_term,#join_section .join_wrap form #frefister_private{
+  position: relative;
+  margin: 10px auto 30px;
+  border: 1px solid #dbdbdb;
+  border-radius: 3px 3px 0 0;
+  box-shadow: 0 1px 3px #eee;
+}
+
+#join_section .join_wrap form .title_box{
+  position: relative;
+  text-align: left;
+  padding: 15px 20px;
+  border-bottom: 1px solid #dbdbdb;
+  background: #f8f8f8;
+}
+
+#join_section .join_wrap form .title_box img{
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+}
+
+#join_section .join_wrap form .title_box h2{
+  position: absolute;
+  display: inline-block;
+  top:18px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+#join_section .join_wrap form #frefister_term textarea{
+  display: block;
+  padding: 20px;
+  width: 100%;
+  height: 150px;
+  background: #fff;
+  border: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.frefister_agree{
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 15px;
+}
+
+#frefister_private .table{
+  padding: 20px;
+  background-color: #fff;
+}
+
+#frefister_private .table table{
+  width: 100%;
+}
+
+#frefister_private .table table th{
+  background-color: #646982;
+  width: 33%;
+  color: #fff;
+  padding: 10px;
+  font-weight: 500;
+  border: 1px solid #555971;
+}
+
+#frefister_private .table table td{
+  border: 1px solid #ddd;
+  padding: 20px;
+  font-weight: 300;
+}
+
+.confirm_btn{
+  text-align: center;
+}
+
+.confirm_btn .submit{
+  width: 200px;
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 20px;
+  padding: 10px 40px;
+  border: 1px solid #3d3d3d;
+  background: #fff;
+  color: #3d3d3d;
+}
+
+.confirm_btn .submit:hover{
+  background: #3d3d3d;
+  color: #fff;
+}
+
+/*join_next area*/
+#register_form{
+  background-color: #fff;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#register_form ul{
+  border-top: 2px solid #000;
+}
+
+#register_form ul li{
+  padding: 30px 40px;
+  margin: 0;
+  border-bottom: 1px solid #ddd;
+}
+
+#register_form ul li label{
+  display: inline-block;
+  width: 140px;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+#register_form ul li label > em{
+  color: #c7254e;
+  padding: 0 5px
+}
+
+#register_form ul li .form_info{
+  margin-top: 8px;
+  margin-left: 10px;
+  font-size: 14px;
+  color: #999;
+  line-height: 1.3;
+}
+
+#register_form ul li input{
+  height: 50px;
+  padding: 3px;
+  border-radius: 0;
+  box-shadow: none;
+  border: 1px solid #ccc;
+  background: #fff;
+  color: #000;
+  vertical-align: middle;
+}
+
+#register_form ul li.form_list02 label:nth-of-type(2),
+#register_form ul li.form_list03 label:nth-of-type(2){
+  text-align: right;
+  margin-right: 50px;
+}
+
+#form_id, #form_email, #form_phone{
+  width: 85%;
+}
+
+#form_password, #form_password_re, #form_name, #form_nick{
+  width: 32%;
+  margin-right: 20px;
+}
+
+#register_form ul li.form_list06 .form_agree{
+  font-size: 300;
+  font-size: 18px;
 }
