--- a/css/common.css
+++ b/css/common.css
@@ -81,7 +81,7 @@ a {
   top: 35px;
 }
 
-#header_wrap.gnb_bg .head .right_menu .all_menu{
+#header_wrap.gnb_bg .head .right_menu .all_menu {
   z-index: 9997;
 }
 
@@ -140,9 +140,15 @@ a {
 
 #header_wrap .gnb_wrap > ul > li {
   display: block;
-  width: 110px;
+  width: 90px;
+  height: 35px;
   text-align: center;
   float: left;
+  margin: 0 10px;
+}
+
+#header_wrap .gnb_wrap > ul > li:hover {
+  border-bottom: 3px solid #666;
 }
 
 #header_wrap .gnb_wrap ul li a {
@@ -177,6 +183,7 @@ a {
 #header_wrap .sub_gnb > div {
   float: left;
   min-height: 400px;
+  text-align: left;
 }
 
 #header_wrap .sub_gnb.is_show {
@@ -184,9 +191,11 @@ a {
 }
 
 #header_wrap .sub_gnb_left {
-  padding: 30px 0 30px 20px;
-  width: 40%;
+  padding: 30px 0 30px 180px;
+  width: 45%;
+  min-width: 300px;
   height: 100%;
+  line-height: 1.5;
 }
 
 #header_wrap .sub_gnb_left h3 {
@@ -202,7 +211,7 @@ a {
 
 #header_wrap .sub_gnb_right {
   padding: 30px 20px 30px 20px;
-  width: 60%;
+  width: 55%;
 }
 
 #header_wrap .sub_gnb_right ul {
@@ -215,8 +224,22 @@ a {
   margin-bottom: 10px;
 }
 
-#header_wrap .sub_gnb_right ul li a:hover{
+#header_wrap .sub_gnb_right ul li a span {
+  display: inline-block;
+  width: 5px;
+  height: 9px;
+  margin-left: 8px;
+  background: url("../img/gnb_arrow.png") no-repeat center;
+}
+
+#header_wrap .sub_gnb_right ul li a:hover {
   border-bottom: 1px solid #333;
+  color: #333;
+  font-weight: 400;
+}
+
+#header_wrap .sub_gnb_right ul li a:hover span {
+  display: none;
 }
 
 /* all menu 영역 */
