--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ section {
 }
 
 .content_01_txt {
-  font-family: "Noto Sans KR"sans-serif;
+  font-family: "Noto Sans KR" sans-serif;
   font-size: 20px;
   font-weight: 300;
   line-height: 40px;
@@ -183,7 +183,7 @@ section {
 }
 
 .content_02_txt {
-  font-family: "Noto Sans KR"sans-serif;
+  font-family: "Noto Sans KR" sans-serif;
   padding-top: 100px;
   font-size: 16px;
   font-weight: 200;
@@ -245,16 +245,16 @@ section {
 .section_03 h3 {
   padding: 100px 0;
   text-align: center;
-  font-family: "Noto Sans KR"sans-serif;
+  font-family: "Noto Sans KR" sans-serif;
   font-size: 30px;
   font-weight: 400;
 }
 
 .swiper-slide {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  background: #e9e9e9;
+  background: #666;
   height: 450px;
 }
 
@@ -267,25 +267,27 @@ section {
 
 .text_area {
   position: relative;
-  left: 10%;
   text-align: center;
+  left: 15%;
 }
 
 .text_area p {
   padding: 40px 0;
+  color: #fff;
   font-size: 21px;
 }
 
 .text_area a {
   font-size: 16px;
   padding: 8px 20px;
-  border: 1px solid #666;
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 20px;
+  color: #fff;
 }
 
 .text_area a:hover {
-  background-color: #333;
-  color: #fff;
+  background-color: #fff;
+  color: #333;
 }
 
 .s01 {
@@ -315,11 +317,11 @@ section {
 }
 
 .swiper-button-prev {
-  background-image: url("../img/arrow_prev.png");
+  background: url("../img/left-arrow.png") no-repeat center;
 }
 
 .swiper-button-next {
-  background-image: url("../img/arrow_next.png");
+  background: url("../img/right-arrow.png") no-repeat center;
 }
 
 .content_04_bg {
