--- a/css/sub05.css
+++ b/css/sub05.css
@@ -18,7 +18,7 @@
   display: inline-block;
 }
 
-.con01_wrap>p {
+.con01_wrap > p {
   font-size: 22px;
   line-height: 1.7;
   font-weight: 300;
@@ -36,7 +36,7 @@
   line-height: 55px;
 }
 
-.section02_wrap>p {
+.section02_wrap > p {
   text-align: center;
   font-size: 24px;
   margin: 20px auto;
@@ -83,7 +83,7 @@
   text-align: center;
 }
 
-.con02_list_active .con02_preview>p {
+.con02_list_active .con02_preview > p {
   font-size: 30px;
   font-weight: 400;
   text-align: center;
@@ -156,14 +156,14 @@
   color: #fff;
 }
 
-.section03_wrap>p {
+.section03_wrap > p {
   width: 780px;
   margin: 55px auto 90px;
   line-height: 2.2;
   font-weight: 300;
 }
 
-.section03_wrap>p>span {
+.section03_wrap > p > span {
   display: block;
   font-size: 24px;
   font-weight: 400;
@@ -204,6 +204,72 @@
   color: #000;
 }
 
+.pop_display {
+  position: fixed;
+  display: none;
+  top: 160px;
+  left: 50%;
+  transform: translate(-50%);
+  width: 1200px;
+  height: 680px;
+  background-color: #fff;
+  padding: 80px 110px;
+  color: #000;
+  z-index: 500;
+}
+
+.pop_display .popleft {
+  position: absolute;
+  top: 80px;
+  left: 110px;
+}
+
+.pop_display .popright {
+  position: absolute;
+  height: 515px;
+  top: 80px;
+  right: 110px;
+  width: 590px;
+  text-align: left;
+}
+
+.pop_display .popright h3 {
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 55px;
+}
+
+.pop_display .popright h3 span {
+  font-weight: 300;
+  font-size: 30px;
+  color: #9f6ab7;
+}
+
+.pop_display .popright p {
+  margin-top: 20px;
+  line-height: 2;
+  font-weight: 300;
+}
+
+.pop_display .popright p span {
+  display: block;
+  font-weight: 400;
+}
+
+.pop_display .popright .popicon {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.pop_display .pop_close_btn {
+  position: absolute;
+  top: 35px;
+  right: 35px;
+  z-index: 99999;
+  cursor: pointer;
+}
+
 /* section04 area */
 #section04 {
   background-color: #f7f7f7;
@@ -221,7 +287,7 @@
   background-repeat: no-repeat, no-repeat;
 }
 
-.com04_wrap>span {
+.com04_wrap > span {
   display: block;
   font-weight: 400;
 }
