--- a/css/sub03.css
+++ b/css/sub03.css
@@ -5,6 +5,25 @@
   background-size: cover;
 }
 
+.login_btn{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 15px 25px;
+  font-size: 16px;
+  border: 1px solid #000;
+  margin: 80px 0 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.login_btn:hover{
+  background-color: #d1c8f0;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
 .more_view_btn:hover,
 .close_view_btn:hover {
   background-color: #d1c8f0;
